Move :runServer task to :plugin:runServer